--- a/serverless.yml
+++ b/serverless.yml
@@ -1,98 +1,114 @@
 service: notes-app-2-api
 
-# Create an optimized package for our functions 
+# Create an optimized package for our functions
 package:
-  individually: true
+    individually: true
 
 plugins:
-  - serverless-bundle # Package our functions with Webpack
-  - serverless-offline
+    - serverless-bundle # Package our functions with Webpack
+    - serverless-offline
+
+custom:
+    # Our stage is based on what is passed in when running serverless
+    # commands. Or fallsback to what we have set in the provider section.
+    stage: ${opt:stage, self:provider.stage}
+    # Set the table name here so we can use it while testing locally
+    tableName: ${self:custom.stage}-notes
 
 provider:
-  name: aws
-  runtime: nodejs8.10
-  stage: dev
-  region: us-east-1
+    name: aws
+    runtime: nodejs8.10
+    stage: dev
+    region: us-east-1
 
-  # 'iamRoleStatements' defines the permission policy for the Lambda function.
-  # In this case Lambda functions are granted with permissions to access DynamoDB.
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:DescribeTable
-        - dynamodb:Query
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:UpdateItem
-        - dynamodb:DeleteItem
-      Resource: "arn:aws:dynamodb:us-east-1:*:*"
+  # These environment variables are made available to our functions
+  # under process.env.
+    environment:
+      tableName: ${self:custom.tableName}
+
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:DescribeTable
+          - dynamodb:Query
+          - dynamodb:Scan
+          - dynamodb:GetItem
+          - dynamodb:PutItem
+          - dynamodb:UpdateItem
+          - dynamodb:DeleteItem
+        # Restrict our IAM role permissions to
+        # the specific table for the stage
+        Resource:
+          - "Fn::GetAtt": [ NotesTable, Arn ]
+
 
 functions:
-  # Defines an HTTP API endpoint that calls the main function in create.js
-  # - path: url path is /notes
-  # - method: POST request
-  # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
-  #     domain api call
-  # - authorizer: authenticate using the AWS IAM role
-  create:
-    handler: create.main
-    events:
-      - http:
-          path: notes
-          method: post
-          cors: true
-          authorizer: aws_iam
-
-  get:
-    # Defines an HTTP API endpoint that calls the main function in get.js
-    # - path: url path is /notes/{id}
-    # - method: GET request
-    handler: get.main
-    events:
-      - http:
-          path: notes/{id}
-          method: get
-          cors: true
-          authorizer: aws_iam
-
-  list:
-    # Defines an HTTP API endpoint that calls the main function in list.js
+    # Defines an HTTP API endpoint that calls the main function in create.js
     # - path: url path is /notes
-    # - method: GET request
-    handler: list.main
-    events:
-      - http:
-          path: notes
-          method: get
-          cors: true
-          authorizer: aws_iam
+    # - method: POST request
+    # - cors: enabled CORS (Cross-Origin Resource Sharing) for browser cross
+    #     domain api call
+    # - authorizer: authenticate using the AWS IAM role
+    create:
+        handler: create.main
+        events:
+            - http:
+                  path: notes
+                  method: post
+                  cors: true
+                  authorizer: aws_iam
 
-  update:
-    # Defines an HTTP API endpoint that calls the main function in update.js
-    # - path: url path is /notes/{id}
-    # - method: PUT request
-    handler: update.main
-    events:
-      - http:
-          path: notes/{id}
-          method: put
-          cors: true
-          authorizer: aws_iam
+    get:
+        # Defines an HTTP API endpoint that calls the main function in get.js
+        # - path: url path is /notes/{id}
+        # - method: GET request
+        handler: get.main
+        events:
+            - http:
+                  path: notes/{id}
+                  method: get
+                  cors: true
+                  authorizer: aws_iam
 
-  delete:
-    # Defines an HTTP API endpoint that calls the main function in delete.js
-    # - path: url path is /notes/{id}
-    # - method: DELETE request
-    handler: delete.main
-    events:
-      - http:
-          path: notes/{id}
-          method: delete
-          cors: true
-          authorizer: aws_iam
+    list:
+        # Defines an HTTP API endpoint that calls the main function in list.js
+        # - path: url path is /notes
+        # - method: GET request
+        handler: list.main
+        events:
+            - http:
+                  path: notes
+                  method: get
+                  cors: true
+                  authorizer: aws_iam
+
+    update:
+        # Defines an HTTP API endpoint that calls the main function in update.js
+        # - path: url path is /notes/{id}
+        # - method: PUT request
+        handler: update.main
+        events:
+            - http:
+                  path: notes/{id}
+                  method: put
+                  cors: true
+                  authorizer: aws_iam
+
+    delete:
+        # Defines an HTTP API endpoint that calls the main function in delete.js
+        # - path: url path is /notes/{id}
+        # - method: DELETE request
+        handler: delete.main
+        events:
+            - http:
+                  path: notes/{id}
+                  method: delete
+                  cors: true
+                  authorizer: aws_iam
 
 # Create our resources with separate CloudFormation templates
 resources:
-  # API Gateway Errors
-  - ${file(resources/api-gateway-errors.yml)}
+    # API Gateway Errors
+    - ${file(resources/api-gateway-errors.yml)}
+    # DynamoDB
+    - ${file(resources/dynamodb-table.yml)}
