Adding our S3 resource

--- a/serverless.yml
+++ b/serverless.yml
@@ -108,7 +108,9 @@ functions:
 
 # Create our resources with separate CloudFormation templates
 resources:
-    # API Gateway Errors
-    - ${file(resources/api-gateway-errors.yml)}
-    # DynamoDB
-    - ${file(resources/dynamodb-table.yml)} 
+  # API Gateway Errors
+  - ${file(resources/api-gateway-errors.yml)}
+  # DynamoDB
+  - ${file(resources/dynamodb-table.yml)}
+  # S3
+  - ${file(resources/s3-bucket.yml)}
