--- a/serverless.yml
+++ b/serverless.yml
@@ -21,26 +21,25 @@ provider:
     stage: dev
     region: us-east-1
 
-  # These environment variables are made available to our functions
-  # under process.env.
+    # These environment variables are made available to our functions
+    # under process.env.
     environment:
-      tableName: ${self:custom.tableName}
+        tableName: ${self:custom.tableName}
 
     iamRoleStatements:
-      - Effect: Allow
-        Action:
-          - dynamodb:DescribeTable
-          - dynamodb:Query
-          - dynamodb:Scan
-          - dynamodb:GetItem
-          - dynamodb:PutItem
-          - dynamodb:UpdateItem
-          - dynamodb:DeleteItem
-        # Restrict our IAM role permissions to
-        # the specific table for the stage
-        Resource:
-          - "Fn::GetAtt": [ NotesTable, Arn ]
-
+        - Effect: Allow
+          Action:
+              - dynamodb:DescribeTable
+              - dynamodb:Query
+              - dynamodb:Scan
+              - dynamodb:GetItem
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
+          # Restrict our IAM role permissions to
+          # the specific table for the stage
+          Resource:
+              - 'Fn::GetAtt': [NotesTable, Arn]
 
 functions:
     # Defines an HTTP API endpoint that calls the main function in create.js
@@ -106,14 +105,23 @@ functions:
                   cors: true
                   authorizer: aws_iam
 
+    billing:
+        handler: billing.main
+        events:
+            - http:
+                  path: billing
+                  method: post
+                  cors: true
+                  authorizer: aws_iam
+
 # Create our resources with separate CloudFormation templates
 resources:
-  # API Gateway Errors
-  - ${file(resources/api-gateway-errors.yml)}
-  # DynamoDB
-  - ${file(resources/dynamodb-table.yml)}
-  # S3
-  - ${file(resources/s3-bucket.yml)}
-  # Cognito
-  - ${file(resources/cognito-user-pool.yml)}
-  - ${file(resources/cognito-identity-pool.yml)}
+    # API Gateway Errors
+    - ${file(resources/api-gateway-errors.yml)}
+    # DynamoDB
+    - ${file(resources/dynamodb-table.yml)}
+    # S3
+    - ${file(resources/s3-bucket.yml)}
+    # Cognito
+    - ${file(resources/cognito-user-pool.yml)}
+    - ${file(resources/cognito-identity-pool.yml)}
