--- a/serverless.yml
+++ b/serverless.yml
@@ -14,6 +14,10 @@ custom:
     stage: ${opt:stage, self:provider.stage}
     # Set the table name here so we can use it while testing locally
     tableName: ${self:custom.stage}-notes
+    # Load our secret environment variables based on the current stage.
+    # Fallback to default if it is not in prod.
+    environment: ${file(env.yml):${self:custom.stage}, file(env.yml):default}
+
 
 provider:
     name: aws
@@ -25,6 +29,8 @@ provider:
     # under process.env.
     environment:
         tableName: ${self:custom.tableName}
+        stripeSecretKey: ${self:custom.environment.stripeSecretKey}
+
 
     iamRoleStatements:
         - Effect: Allow
